dinoco_docs/src/content/v0.0.2/de-de/orm/find-many.mdx
export const title = 'find_many';

# find_many

Wird verwendet, um eine Liste von Datensätzen abzurufen.

---

## Was Sie tun können

- `.select::\<T\>()`: ersetzt die Standardprojektion des Modells durch eine benutzerdefinierte Projektion.
- `.cond(...)`: fügt Filterbedingungen zur Abfrage hinzu.
- `.take(...)`: begrenzt die Anzahl der zurückgegebenen Datensätze.
- `.skip(...)`: überspringt eine Anzahl von Datensätzen, bevor das Ergebnis zurückgegeben wird.
- `.order_by(...)`: definiert die Sortierung der Abfrage.
- `.includes(...)`: lädt Beziehungen zusammen mit den Hauptdatensätzen.
- `.count(...)`: berechnet Beziehungszähler und füllt Felder wie `posts_count`.
- `.cache(...)`: fragt zuerst in Redis mit dem angegebenen Schlüssel ab; bei Cache-Miss wird die Abfrage ausgeführt, gespeichert und das Ergebnis zurückgegeben. Bei Cache-Hit protokolliert der Query-Logger `CACHE HIT key=...`.
- `.cache_with_expiration(...)`: gleiches Verhalten wie der Standard-Cache, speichert aber mit TTL in Sekunden.
- `.read_in_primary()`: erzwingt das Lesen aus der primären Datenbank, ohne eine Replik zu verwenden.
- `.execute(&client)`: führt die Abfrage in der Datenbank aus.

## Rückgabe

Ohne `select::\<T\>()` ist die Rückgabe:

```rust
DinocoResult<Vec<M>>
```

Mit `select::\<T\>()` wird die Rückgabe:

```rust
DinocoResult<Vec<T>>
```

## Grundlegendes Beispiel

```rust
let users = dinoco::find_many::<User>()
    .execute(&client)
    .await?;
```

## Beispiel mit Filter

```rust
let users = dinoco::find_many::<User>()
    .cond(|w| w.email.eq("ana@acme.com"))
    .execute(&client)
    .await?;
```

## Beispiel mit Paginierung und Sortierung

```rust
let users = dinoco::find_many::<User>()
    .order_by(|w| w.name.asc())
    .skip(20)
    .take(10)
    .execute(&client)
    .await?;
```

## Beispiel für benutzerdefinierte Auswahl

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserListItem {
    id: i64,
    name: String,
}

let users = dinoco::find_many::<User>()
    .select::<UserListItem>()
    .execute(&client)
    .await?;
```

## Beispiel mit einfachem Include

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserWithPosts {
    id: i64,
    name: String,
    posts: Vec<Post>,
}

let users = dinoco::find_many::<User>()
    .select::<UserWithPosts>()
    .includes(|i| i.posts())
    .execute(&client)
    .await?;
```

## Beispiel mit gefiltertem Include

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserWithPublishedPosts {
    id: i64,
    name: String,
    posts: Vec<Post>,
}

let users = dinoco::find_many::<User>()
    .select::<UserWithPublishedPosts>()
    .includes(|i| i.posts().cond(|w| w.published.eq(true)))
    .execute(&client)
    .await?;
```

## Beispiel mit verschachteltem Include

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(Comment)]
struct CommentListItem {
    id: i64,
    text: String,
}

#[derive(Debug, Clone, dinoco::Extend)]
#[extend(Post)]
struct PostWithComments {
    id: i64,
    title: String,
    comments: Vec<CommentListItem>,
    comments_count: usize,
}

#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserWithPosts {
    id: i64,
    name: String,
    posts: Vec<PostWithComments>,
}

let users = dinoco::find_many::<User>()
    .select::<UserWithPosts>()
    .includes(|i| {
        i.posts()
            .includes(|post| post.comments().take(3))
            .count(|post| post.comments())
    })
    .execute(&client)
    .await?;
```

## Beispiel mit Beziehungszählung

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserWithPostsCount {
    id: i64,
    name: String,
    posts_count: usize,
}

let users = dinoco::find_many::<User>()
    .select::<UserWithPostsCount>()
    .count(|i| i.posts())
    .execute(&client)
    .await?;
```

## Beispiel für das Lesen aus der primären Datenbank

```rust
let users = dinoco::find_many::<User>()
    .read_in_primary()
    .take(5)
    .execute(&client)
    .await?;
```

## Beispiel mit Worker

```rust
use database::*;

let _worker = workers()
    .on::<Vec<User>, _, _>("user.batch-read", |job| async move {
        println!("Batch mit {} Benutzern gelesen", job.data.len());
        job.success();
    })
    .run()
    .await?;

let users = dinoco::find_many::<User>()
    .order_by(|w| w.name.asc())
    .take(20)
    .enqueue("user.batch-read")
    .execute(&client)
    .await?;
```

Erfahren Sie mehr über Worker unter [**`queues`**](/v0.0.2/orm/queues).

## Beispiel mit Cache

Diese Methode wird nur generiert, wenn das `config {}` des Schemas `redis` enthält.

```rust
use database::*;

let users = dinoco::find_many::<User>()
    .order_by(|w| w.name.asc())
    .cache("users:list")
    .execute(&client)
    .await?;
```

## Beispiel mit Cache und Ablaufdatum

```rust
use database::*;

let users = dinoco::find_many::<User>()
    .take(20)
    .cache_with_expiration("users:top-20", 60)
    .execute(&client)
    .await?;
```

## Nächste Schritte

- [**`find_first::\<M\>()`**](/v0.0.2/orm/find-first): Version zum Abrufen von maximal einem Datensatz.
- [**`count::\<M\>()`**](/v0.0.2/orm/count): Zählung von Datensätzen mit Filter.
